--- a/DEmo2/DEmo2/Web.config
+++ b/DEmo2/DEmo2/Web.config
@@ -3,5 +3,12 @@
 	<connectionStrings>
 		<add name="DBCS" connectionString="server=PC293465\SQLEXPRESS;database=Sample1; integrated security=SSPI"/>
 	</connectionStrings>
-
+  <system.web>
+    <webServices>
+      <protocols>
+        <add name="HttpGet"/>
+      </protocols>
+    </webServices>
+    <compilation debug="true"/>
+  </system.web>
 </configuration>
