--- a/DEmo2/DEmo2/DEmo2.csproj
+++ b/DEmo2/DEmo2/DEmo2.csproj
@@ -59,7 +59,9 @@
     <Content Include="Templates\courses.html" />
     <Content Include="Templates\home.html" />
     <Content Include="Templates\students.html" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
