--- a/DEmo2/DEmo2/Web.config
+++ b/DEmo2/DEmo2/Web.config
@@ -3,12 +3,26 @@
 	<connectionStrings>
 		<add name="DBCS" connectionString="server=PC293465\SQLEXPRESS;database=Sample1; integrated security=SSPI"/>
 	</connectionStrings>
-  <system.web>
-    <webServices>
-      <protocols>
-        <add name="HttpGet"/>
-      </protocols>
-    </webServices>
-    <compilation debug="true"/>
-  </system.web>
+	<system.web>
+		<webServices>
+			<protocols>
+				<add name="HttpGet"/>
+			</protocols>
+		</webServices>
+		<compilation debug="true"/></system.web>
+	<system.webServer>
+		<rewrite>
+			<rules>
+				<rule name="RewriteRules" stopProcessing="true">
+					<match url=".*"/>
+					<conditions logicalGrouping="MatchAll">
+						<add input="{REQUEST_FILENAME}" matchType="IsFile" negate="true"/>
+						<add input="{REQUEST_FILENAME}" matchType="IsDirectory" negate="true"/>
+						<add input="{REQUEST_URI}" pattern="^/(api)" negate="true"/>
+					</conditions>
+					<action type="Rewrite" url="/index.html"/>
+				</rule>
+			</rules>
+		</rewrite>
+	</system.webServer>
 </configuration>
